javascript/ql/test/query-tests/NodeJS/InvalidExport/InvalidExport.qlref
query: NodeJS/InvalidExport.ql
postprocess: utils/test/InlineExpectationsTestQuery.ql
